--- a/style.css
+++ b/style.css
@@ -1,209 +1,114 @@
-body, ul, li, h1, h2, a{
-    margin: 0;
-    padding: 0;
-    font-family: arial;
-
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+	font-family: Gotham Rounded, sans-serif;
+}
+body {
+	background: linear-gradient(to right, hsl(200, 100%, 50%), hsl(175, 100%, 50%));
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	overflow: hidden;
 }
 
-header{
-    background-color: #F63232;
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-    top: 0;
-    left: 0;
+.clock {
+	width: 300px;
+	height: 300px;
+	background-color: rgba(255, 255, 255, .8);
+	border-radius: 50%;
+	border: 2px solid black;
+	position: relative;
 }
-header h1{
-    color: white;
-    border: 8px solid white;
-    padding: 6px 12px;
-    display: inline-block;
-    border-radius: 36px;  
-}
-.banner{
-    position: relative;
-    
-}
-.banner img{
-    max-width: 100%;
-}
-.banner .welcome{
-    background-color: #FEB614;
-    color: white;
-    padding: 30px;
-    position: absolute;
-    left: 0;
-    top: 30%;
 
+.clock .number {
+	--rotation: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	transform: rotate(var(--rotation));
+	font-size: 1.5rem;
 }
-.banner h2{
-    font-size: 74px;;
-}
-.banner h2 span{
-    font-size: 1.3em;
-}
-nav{
-    background-color: #F4F4F4;
-    padding: 20px;
-    position: sticky;
-    top: 105px;
-    }
-nav ul{
-    white-space: nowrap;
-    max-width: 1200px;
-    margin: 1px auto;
-}
-nav li{
-    width: 25%;
-    display: inline-block;
-    font-size: 23px;
-}
-nav li a{
-    text-decoration: none;
-    color: #4B4B4B;
-}
-nav li a.join{
-    color: #F63232;
-}
-main{
-    max-width: 100%;
-    width: 1200px;
-    margin: 80px auto;
-    padding: 0 40px;
-    box-sizing: border-box;
 
-} 
-article h2{
-    color: #F63232;
-    font-size: 48px;
+.clock .number1 {
+	--rotation: 30deg;
 }
-article p{
-    line-height: 2em;
-    color: #4B4B4B;
+.clock .number2 {
+	--rotation: 60deg;
+}
+.clock .number3 {
+	--rotation: 90deg;
+}
+.clock .number4 {
+	--rotation: 120deg;
+}
+.clock .number5 {
+	--rotation: 150deg;
+}
+.clock .number6 {
+	--rotation: 180deg;
+}
+.clock .number7 {
+	--rotation: 210deg;
+}
+.clock .number8 {
+	--rotation: 240deg;
+}
+.clock .number9 {
+	--rotation: 270deg;
+}
+.clock .number10 {
+	--rotation: 300deg;
+}
+.clock .number11 {
+	--rotation: 330deg;
+}
 
+.clock .hand {
+	--rotation: 0;
+	position: absolute;
+	bottom: 50%;
+	left: 50%;
+	background-color: black;
+	border: 1px solid white;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	transform-origin: bottom;
+	z-index: 10;
+	transform: translateX(-50%) rotate(calc(var(--rotation) * 1deg));
 }
-.images{
-    text-align: center; 
-    margin: 80px 0;
-    white-space: nowrap;
+.clock::after {
+	content: '';
+	position: absolute;
+	background-color: black;
+	z-index: 11;
+	width: 15px;
+	height: 15px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 50%;
 }
-.images li{
-    display: inline-block;
-    width: 40%;
-    margin: 20px 5%;
-}
-.images li img{
-    max-width: 100%;
-   
-}
-section.join{
-    background: #F4F4F4;
-    text-align: center;
-    padding: 60px 20px;
-    color: #4B4B4B;
-}
-.join h2{
-    font-size: 36px;
-    
-}
-form input{ 
-    margin: 20px;
-    padding: 10px 20px;
-    font-size: 24px;
-    border-radius: 28px;
-    border: 4px solid white;
-}
-footer{
-    background: #F63232;
-    color: white;
-    padding: 10px;
-    text-align: center;
-}
-/*pseudo classes*/
 
-nav li a:hover{
-    text-decoration: underline;
+.clock .hand.second {
+	width: 3px;
+	height: 45%;
+	background-color: red;
 }
-.images li:hover{
-    position: relative;
-    top: -4px;
-   
+.clock .hand.minute {
+	width: 7px;
+	height: 40%;
+	background-color: black;
 }
-form input:focus{
-    border: 4px dashed #4b4b4b;
-    outline: none;
+.clock .hand.hour {
+	width: 10px;
+	height: 35%;
+	background-color: black;
 }
-form input:valid{
-    border: 4px solid green;
-}
-article p::first-line{
-    font-weight: bold;
-    font-size: 1.2em;
-}
-section.join p::first-letter{
-    
-    font-size: 1.2em;
-}
-section.join p::selection{
-    background-color: red;
-    color: white;
-}
-p::after{
-    content: '...';
-}
-@media screen and (max-width: 1400px){
-
-    .banner .welcome h2{
-        font-size: 60px;    
-    }
-    nav li{
-        font-size: 18px;
-    }
-
-}
-@media screen and (max-width: 960px){
-
-    .banner .welcome h2{
-        font-size: 40px;    
-    }
-}
-@media screen and (max-width: 700px){
-
-    .banner .welcome{
-        position: relative;
-        text-align: center; 
-        padding: 10px;  
-    }
-    .banner .welcome br{
-        display: none;
-    }
-    .banner .welcome h2{
-        font-size: 25px;    
-    }
-    .banner .welcome span{
-        font-size: 1em;
-    }
-    .images li{
-        width: 100%;
-        margin: 20px auto;
-        display: block;
-    }
-}
-@media screen and (max-width: 560px){
-    nav li{
-        font-size: 20px;
-        display: block;
-        width: 100%;
-        margin: 12px 0;
-    }
-    header{
-        position: relative;
-    }
-    nav{
-        top: 0;
-    }
-    
-
+body {
+	background-image: url('sky.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
